--- a/style/css.css
+++ b/style/css.css
@@ -673,7 +673,7 @@ header {
 /*Assistance*/
 .assistance { 
     padding: 5rem 0;
-    background: url("../image/carBm.jpg") no-repeat right;
+    background: url("../image/carBm.jpg") no-repeat center;
     background-size: cover;
     position: relative;
 }
@@ -740,7 +740,7 @@ header {
 
     .assistance::after {
         width: 36%;
-        left: 3rem;
+        left: 2rem;
         transform: skewX( 344deg);
     }
 
